--- a/CursoCssGrid/style.css
+++ b/CursoCssGrid/style.css
@@ -1,127 +1,14 @@
-main5 {
-    height: 100vh;
+
+main9 {
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: auto auto auto;
-    grid-template-rows: auto auto auto;
+    grid-template-columns: repeat(3, minmax(2rem, 1fr));
 }
 
-
-.numeros3 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color:antiquewhite;
-}
-
-main4 {
-    height: 100vh;
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: 1fr 2fr 1fr 1fr;
-    grid-template-rows: auto auto auto;
-}
-
-main3 {
-    height: 100vh;
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-columns: auto auto auto;
-}
-
-.numeros2 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color:antiquewhite;
-}
-/*ubicarnos en el número 9*/
-/*grid-column-end: 5; para que llegue al número cinco*/
-/*grid-column-end: -1; para que siempre llegue al final*/
-.numeros2:nth-child(9){
-    background-color: teal;
-    /* grid-column-start: 1;
-    grid-column-end: -1; */
-    grid-column: 1 / -1;
-}
-
-.numeros2:nth-child(6){
-    background-color: teal;
-    grid-column-start: 2;
-    grid-column-end: 4; 
-}
-
-.numeros {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: aquamarine;
-}
-
-main > * {
+main9 > * {
     background-color: burlywood;
     padding: 1rem;
     font-size: 3em;
-}
-
-main {
-    display: grid;
-    grid-gap: 1rem;
-}
-@media (max-width: 576px){
-    main {
-        grid-template-areas:
-        "header"
-        "izquierda"
-        "article"
-        "derecha"
-        "footer"
-    ;
-    }
-}
-main2 > * {
-    background-color: burlywood;
-    padding: 1rem;
-    font-size: 3em;
-}
-main2 {
-    display: grid;
-    grid-gap: 1rem;
-    grid-template-areas:
-        "header header header"
-        "izquierda contenido derecha"
-        "footer footer ."
-        ;
-}
-@media (min-width: 576px){
-    main {
-        grid-template-areas:
-            "header header header"
-            "izquierda contenido derecha"
-            "footer footer footer"
-            ;
-    }
-}
-
-header {
-    grid-area: header;
-}
-
-aside:first-of-type {
-    grid-area: izquierda;
-}
-
-article {
-    grid-area: contenido;
-}
-
-aside:last-of-type {
-    grid-area: derecha;
-}
-
-footer {
-    grid-area: footer;
-}
-.login{
-    grid-area: login;
+    justify-content: center;
+    align-items: center;
 }
