--- a/CursoCssGrid/style.css
+++ b/CursoCssGrid/style.css
@@ -1,14 +1,20 @@
-
-main9 {
+main11 {
     display: grid;
     grid-gap: 1rem;
-    grid-template-columns: repeat(3, minmax(2rem, 1fr));
+    margin: 2rem 0;
 }
 
-main9 > * {
-    background-color: burlywood;
-    padding: 1rem;
-    font-size: 3em;
+main11 .numero11 {
+    display: flex;
     justify-content: center;
     align-items: center;
+    padding: 4rem;
+}
+.auto-fill .numero11{
+    background-color:teal;
+    color: white;
+}
+
+.auto-fill {
+    grid-template-columns: repeat(12, minmax(4rem, 1fr));
 }
