--- a/CursoCssGrid/style.css
+++ b/CursoCssGrid/style.css
@@ -1,20 +1,28 @@
-main11 {
+main12 {
     display: grid;
     grid-gap: 1rem;
     margin: 2rem 0;
 }
 
-main11 .numero11 {
+main12 .numero12 {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 4rem;
 }
-.auto-fill .numero11{
+.auto-fill .numero12{
     background-color:teal;
     color: white;
 }
 
+.auto-fit .numero12{
+    background-color:brown;
+    color: white;
+}
+
 .auto-fill {
-    grid-template-columns: repeat(12, minmax(4rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(4rem, 1fr));
+}
+.auto-fit {
+    grid-template-columns: repeat(auto-fit, minmax(4rem, 1fr));
 }
