--- a/CursoCssGrid/style.css
+++ b/CursoCssGrid/style.css
@@ -1,28 +1,15 @@
 main12 {
     display: grid;
     grid-gap: 1rem;
-    margin: 2rem 0;
+    height: 100vh;
+    grid-template-columns: 20rem 7rem;
+    grid-auto-flow: column dense;
 }
 
-main12 .numero12 {
+.numero12 {
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 4rem;
-}
-.auto-fill .numero12{
-    background-color:teal;
-    color: white;
-}
-
-.auto-fit .numero12{
-    background-color:brown;
-    color: white;
-}
-
-.auto-fill {
-    grid-template-columns: repeat(auto-fill, minmax(4rem, 1fr));
-}
-.auto-fit {
-    grid-template-columns: repeat(auto-fit, minmax(4rem, 1fr));
+    background-color: aquamarine;
 }
