--- a/CursoCssGrid/styleAnt.css
+++ b/CursoCssGrid/styleAnt.css
@@ -1,3 +1,64 @@
+main13 {
+    display: grid;
+    grid-gap: 1rem;
+    height: 100vh;
+    grid-template-columns: 20rem 7rem;
+    grid-auto-columns: 40rem;
+    grid-auto-flow: column;
+}
+
+.numero13 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem;
+    background-color: aquamarine;
+}
+
+.numero13:nth-child(1) {
+    background-color: goldenrod;
+    order: 4;
+}
+
+.numero13:nth-child(2) {
+    background-color: goldenrod;
+    order: 3;
+}
+
+.numero13:nth-child(3) {
+    background-color: goldenrod;
+    order: 2;
+}
+
+.numero13:nth-child(4) {
+    background-color: goldenrod;
+    order: 1;
+}
+
+
+main12 {
+    display: grid;
+    grid-gap: 1rem;
+    height: 100vh;
+    grid-template-columns: 20rem 7rem;
+    grid-auto-columns: 40rem;
+    grid-auto-flow: column;
+}
+
+.numero12 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 4rem;
+    background-color: aquamarine;
+}
+
+.numero12:first-of-type,
+.numero12:nth-child(2) {
+    background-color: goldenrod;
+}
+
+
 main11 {
     display: grid;
     grid-gap: 1rem;
