--- a/AprendeFlexbox/estilos.css
+++ b/AprendeFlexbox/estilos.css
@@ -11,22 +11,45 @@
     outline: 2px solid crimson;
     margin: 20px auto;
     display: flex;
-    align-items: center;
+    flex-direction: row;
+    /*justify-content: space-evenly;*/
+    /*justify-content: space-around;*/
+    /*justify-content: space-between;*/
+    /*justify-content: flex-end;*/
+    /*justify-content: column-reverse;*/
+    /*justify-content: flex-start;*/
+    /*justify-content: center;*/
+    
+    /* flex-direction: row; */
     /* flex-direction: column; */
+    /* flex-wrap: wrap-reverse;*/
+    /* flex-flow: direction wrap; */
+    /* flex-flow: column wrap; */
 }
 
 .item{
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
     background: darkcyan;
     color: #fff;
     text-align: center;
     font-family: sans-serif;
     line-height: 80px;
+    order:0;
+    flex-grow: 0;
+    flex-shrink: 1;
+
+    /* flex: grow shrink basis; */
+    flex: 0 1 auto;
+    /* flex-basis: 300px; */
 }
 
 .item1{
 
+}
+
+.item22{
+    background: cornflowerblue;
 }
 
 .item2{
@@ -40,5 +63,9 @@
 
 .item4{
     background: blueviolet;
+    order:-1;
 }
 
+.item5{
+    background: red;
+}
